Clean Code Ticket 1570 changed collect.(Collectors.toList()) to toList() in class PasseService
https://gitlab.gras-it.de/hsrt/swt2/-/issues/1570